--- a/13-webpack的使用/04-webpack配置Vue&Plugin/package.json
+++ b/13-webpack的使用/04-webpack配置Vue&Plugin/package.json
@@ -15,10 +15,17 @@
     "babel-preset-es2015": "^6.24.1",
     "css-loader": "^3.2.0",
     "file-loader": "^4.2.0",
+    "html-webpack-plugin": "^3.2.0",
     "less": "^3.10.3",
     "less-loader": "^5.0.0",
     "style-loader": "^1.0.0",
+    "uglifyjs-webpack-plugin": "^1.1.1",
     "url-loader": "^2.2.0",
+    "vue-loader": "^13.0.0",
+    "vue-template-compiler": "^2.6.10",
     "webpack": "^3.6.0"
+  },
+  "dependencies": {
+    "vue": "^2.6.10"
   }
 }
