--- a/22-WebProject/mail/package.json
+++ b/22-WebProject/mail/package.json
@@ -13,7 +13,8 @@
     "core-js": "^3.3.2",
     "normalize.css": "^8.0.1",
     "vue": "^2.6.10",
-    "vue-router": "^3.1.3"
+    "vue-router": "^3.1.3",
+    "vuex": "^3.1.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.0.0",
